--- a/css/loves.css
+++ b/css/loves.css
@@ -1,1 +1,56 @@
 
+body {
+  background-color: #FAAFBA;
+}
+
+
+
+h1 {
+  font-size: 3rem;
+  margin-bottom: 25px;
+}
+
+h2 {
+  margin-top: 45px;
+  margin-bottom: 15px;
+}
+
+h3 {
+  margin-top: 10px;
+  margin-bottom: 35px;
+  font-weight: normal;
+}
+
+
+
+a {
+  margin: 12px;
+  text-decoration: none;
+  font-weight: bold;
+  color: #4b2e2e;
+}
+
+a:hover {
+  text-decoration: underline;
+}
+
+
+img {
+  display: block;
+  max-width: 600px;       
+  width: 100%;             
+  height: auto;           
+  margin: 20px auto;    
+  border: 4px solid saddlebrown;
+  border-radius: 14px;
+  box-sizing: border-box;
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+
+img:hover {
+  transform: scale(1.03);
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.25);
+}
+
+
