--- a/css/aboutme.css
+++ b/css/aboutme.css
@@ -37,7 +37,7 @@ a:hover {
 
 
 img {
-  display: block;
+  display: flow;
   max-width: 600px;       
   width: 100%;             
   height: auto;           
